--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 .DS_Store
-modified-files/contours/srtm*
-modified-files/dem_srtm_elevation/QGIS_project
-modified-files/dem_srtm_elevation/srtm*
+visualizations/hide/
+water_quantity/modified_files/dwr_casgem/database/
